[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }

hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.3" # for collect() all fragments of the request body
hyper-util = { version = "0.1.11", features = ["full"] } # for TokioIo

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
